--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,16 @@
         <maven.compiler.plugin.version>3.6.2</maven.compiler.plugin.version>
 
         <calculator.version>1.0</calculator.version>
-        <surefire.version>3.0.0-M3</surefire.version>
+        <surefire.version>2.21.0</surefire.version>
 
         <selenium.version>3.141.59</selenium.version>
         <webdrivermanager.version>3.7.1</webdrivermanager.version>
         <common.io.version>2.6</common.io.version>
         <selenide.version>5.5.0</selenide.version>
         <allure.version>2.13.0</allure.version>
-
         <aspectj.version>1.8.10</aspectj.version>
+
+
     </properties>
 
     <profiles>
