--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,12 @@
         <selenide.version>5.5.0</selenide.version>
         <allure.version>2.13.0</allure.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <jackson.version>2.9.9</jackson.version>
 
         <!-- Plugins version -->
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
-
+        <allure.maven.plugin.version>2.10.0</allure.maven.plugin.version>
     </properties>
 
     <profiles>
@@ -127,7 +128,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <suite.file>src/test/resources/hw5/HM5_exercise1.xml</suite.file>
+                <suite.xml>src/test/resources/hw5/HM5_exercise1.xml</suite.xml>
             </properties>
         </profile>
     </profiles>
@@ -165,30 +166,30 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
-
+<!--
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-java-commons</artifactId>
             <version>${allure.version}</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-attachments</artifactId>
-            <version>${allure.version}</version>
-        </dependency>
+        <!--
+                <dependency>
+                    <groupId>io.qameta.allure</groupId>
+                    <artifactId>allure-attachments</artifactId>
+                    <version>${allure.version}</version>
+                </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.9</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
@@ -209,20 +210,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <reuseForks>false</reuseForks>
-                    <forkCount>0</forkCount>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suite.file}</suiteXmlFile>
-                    </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suite.xml}</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.10.0</version>
+                <version>${allure.maven.plugin.version}</version>
                 <configuration>
                     <reportVersion>2.13.0</reportVersion>
                     <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
