--- a/pom.xml
+++ b/pom.xml
@@ -210,8 +210,9 @@
         <dependency>
             <groupId>com.epam.jdi</groupId>
             <artifactId>jdi-light-html</artifactId>
-            <version>RELEASE</version>
+            <version>1.1.10</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
