--- a/pom.xml
+++ b/pom.xml
@@ -138,10 +138,21 @@
         <profile>
             <id>test-CucumberExercise</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
                 <suite.xml>src/test/resources/hw6/exercise.xml</suite.xml>
+            </properties>
+        </profile>
+
+
+        <profile>
+            <id>test-JDI</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <suite.xml>src/test/resources/hw_jdi/JDI.xml</suite.xml>
             </properties>
         </profile>
     </profiles>
